--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -5,6 +5,7 @@
 				<Page id="page" title="{i18n>title}">
 					<content>
 						<Text text="view 1"></Text>
+						<Text text="view 2"></Text>
 					</content>
 				</Page>
 			</pages>
