--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -6,6 +6,7 @@
 					<content>
 						<Text text="view 1"></Text>
 						<Text text="view 2"></Text>
+						<Text text="localBranch name : feature"></Text>
 					</content>
 				</Page>
 			</pages>
