dev2 add button

--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -7,6 +7,8 @@
 						<Text text="view 1"></Text>
 						<Text text="view 2"></Text>
 						<Text text="localBranch name : feature"></Text>
+						
+						<Button text="send"></Button>
 					</content>
 				</Page>
 			</pages>
