--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -8,11 +8,10 @@
 						<Text text="view 2"></Text>
 						<Text text="localBranch name : feature"></Text>
 						
-<<<<<<< Upstream, based on origin/master
-						<Button text="send"></Button>
-=======
+						<Button text="send send"></Button>
+						
 						<Button text="master button"></Button>
->>>>>>> 2969cee dev1 add master button branch master
+
 					</content>
 				</Page>
 			</pages>
