feature send dev1 change name

--- a/webapp/view/View1.view.xml
+++ b/webapp/view/View1.view.xml
@@ -8,7 +8,7 @@
 						<Text text="view 2"></Text>
 						<Text text="localBranch name : feature"></Text>
 						
-						<Button text="send"></Button>
+						<Button text="feature send"></Button>
 						
 						<Button text="master button"></Button>
 
